--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         }
 
         // Optionally pre-load one of the theaters
-        fetchShowtimes('showtimes_theater1.json');
+        fetchShowtimes('showtime_AMC Phipps Plaza 14.json');
     </script>
 </body>
 </html>
