--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h1>Movie Showtimes</h1>
     <button onclick="fetchShowtimes('showtime_AMC Phipps Plaza 14.json')">Phipps Plaza 14</button>
     <button onclick="fetchShowtimes('showtime_AMC North Point Mall 12.json')">North Point Mall 12</button>
+    <button onclick="fetchShowtimes('showtime_AMC Parkway Pointe 15.json')">Parkway Pointe 15</button>
     <div id="showtimes-container"></div>
 
 <script>
