--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
     <h1>Movie Showtimes<span id="last-updated" class="last-updated"></span></h1>
     <button onclick="fetchShowtimes('showtime_AMC Phipps Plaza 14.json')">Phipps Plaza 14</button>
+    <button onclick="fetchShowtimes('showtime_Regal Atlantic Station.json')">Regal Atlantic Station</button>
     <button onclick="fetchShowtimes('showtime_AMC North Point Mall 12.json')">North Point Mall 12</button>
     <button onclick="fetchShowtimes('showtime_AMC Parkway Pointe 15.json')">Parkway Pointe 15</button>
     <div id="showtimes-container"></div>
