--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     function updateLastUpdatedTime() {
         const now = new Date();
         const lastUpdatedElement = document.getElementById('last-updated');
-        lastUpdatedElement.textContent = `Current time: ${now.toLocaleString()} (This page updates thrice a day at midnight, noon, and 6pm)`;
+        lastUpdatedElement.textContent = `Current time: ${now.toLocaleString()} (This page updates thrice a day automatically at midnight, noon, and 6pm)`;
     }
 
      // Optionally pre-load one of the theaters
